--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="reset_settings">Reset zoom</string>
     <string name="location_big_island">Island of Hawai\'i</string>
 
     <!-- TODO: Remove or change this placeholder text -->
